# sct-server

./: .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  data.sql  schema.sql
.github/workflows/: ci.yaml
src/: main.rs
src/data/: chapter.rs  resource.rs  resources.rs
src/models/: chapter.rs  comment.rs  course.rs  mod.rs  resource.rs  resources.rs  stars.rs  subject.rs  user.rs
src/routes/: auth.rs  chapter.rs  chapters.rs  courses.rs  mod.rs  resource.rs  resources.rs  subjects.rs
